# esp32-asyncapi-codegen

./: .gitignore  build.sh  package-lock.json  readme.md
helpers/: normalizeSchemaName.js
stash/: CMakeLists.txt
template/: readme.txt  schema.js
template/esp32-mqtt/: sdkconfig
template/esp32-mqtt/main/: CMakeLists.txt  gps_module.cpp
template/schemas/: schema.js
