idf_component_register(SRCS SensorReading_0_0_1Schema.c anonymous_schema_12Schema.c anonymous_schema_3Schema.c anonymous_schema_7Schema.c
      SensorStatusSchema.c anonymous_schema_13Schema.c anonymous_schema_4Schema.c anonymous_schema_8Schema.c
      anonymous_schema_10Schema.c anonymous_schema_1Schema.c  anonymous_schema_5Schema.c anonymous_schema_9Schema.c
      anonymous_schema_11Schema.c anonymous_schema_2Schema.c  anonymous_schema_6Schema.c
      REQUIRES json
      INCLUDE_DIRS .)